# Plick

./: .gitignore  .gitmodules  CMakeLists.txt  hw_config.c  main.cpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h
doc/: build.bat  prerequested.md
